# hyprthemer

./: pyproject.toml
src/hyprthemer/: config.py  hooks.py  main.py  monitors.py  state.py  theme.py
