[project]
name = "hyprthemer"
version = "0.1.0"
description = ""
authors = [
    {name = "aexra",email = "defdXs@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.3.1,<9.0.0)"
]

[tool.poetry]
packages = [{include = "hyprthemer", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hyprthemer = "hyprthemer.main:cli"
